--- a/.env
+++ b/.env
@@ -1,1 +1,8 @@
-VITE_API_URL = http://localhost:3000/api
+VITE_API_URL = https://tts.technify.dev/api/api
+VITE_LOGIN_ENDPOINT = /Identity/Login
+VITE_REGISTER_ENDPOINT = /Identity/Register
+VITE_REFRESH_TOKEN_ENDPOINT = /Identity/RefreshToken
+VITE_LOGOUT_ENDPOINT = /Identity/RevokeRefreshToken
+
+VITE_SEARCH_PROJECTS_ENDPOINT = /Project/Search
+VITE_GET_PROJECT_BY_ID_ENDPOINT = /Project/GetProjectById
