--- a/package.json
+++ b/package.json
@@ -47,10 +47,11 @@
     "@tiptap/starter-kit": "^2.3.1",
     "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.0",
+    "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.0.2",
+    "framer-motion": "^11.2.10",
     "i18next": "^23.11.2",
     "i18next-browser-languagedetector": "^7.2.1",
     "i18next-http-backend": "^2.5.0",
@@ -59,6 +60,7 @@
     "lucide-react": "^0.368.0",
     "next-themes": "^0.3.0",
     "react": "^18.2.0",
+    "react-cookie-consent": "^9.0.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
@@ -67,7 +69,7 @@
     "react-resizable-panels": "^2.0.17",
     "react-router-dom": "^6.22.3",
     "sonner": "^1.4.41",
-    "tailwind-merge": "^2.2.2",
+    "tailwind-merge": "^2.3.0",
     "tailwind-scrollbar": "^3.1.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.0",
