--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.1.0",
+    "@dnd-kit/sortable": "^8.0.0",
     "@hookform/resolvers": "^3.3.4",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-alert-dialog": "^1.0.5",
@@ -38,13 +40,9 @@
     "@radix-ui/react-toggle": "^1.0.3",
     "@radix-ui/react-toggle-group": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@react-oauth/google": "^0.12.1",
     "@tanstack/react-query": "^5.29.2",
     "@tanstack/react-table": "^8.16.0",
-    "@tiptap/extension-heading": "^2.3.1",
-    "@tiptap/extension-placeholder": "^2.4.0",
-    "@tiptap/pm": "^2.3.1",
-    "@tiptap/react": "^2.3.1",
-    "@tiptap/starter-kit": "^2.3.1",
     "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -66,6 +64,7 @@
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.51.3",
     "react-i18next": "^14.1.0",
+    "react-quill": "^2.0.0",
     "react-resizable-panels": "^2.0.17",
     "react-router-dom": "^6.22.3",
     "sonner": "^1.4.41",
